--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 h1 {
     background-color: green;
 }
+
+audio::-webkit-media-controls-mute-button {
+
+}
+audio::-webkit-media-controls-play-button {
+
+}
+audio::-webkit-media-controls-enclosure {
+
+}
