--- a/style.css
+++ b/style.css
@@ -1,51 +1,289 @@
+html {
+    background-color: #020659;
+    
+}
+
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0 auto;
+    background-color: white;
+    width: 375px;
+    display: grid;
+    grid-template-areas:
+        "nav"
+        "header"
+        "main"
+        "footer";
+}
+header {
+    background-image: linear-gradient(to right, #2104D9, #020659, black);
+    color: white;
+    padding: 1px 30px;
+    grid-area: header;
+    
+}
+
+main {
+    grid-area: main;
+    width: 375px;
 }
 
 h1 {
-    font-size:1.25em;
+    font-size: 22px;
+    line-height: 2em;
 }
+
 h2, h3 {
     font-size: 1em;
+    color: #590242;
+    
 }
+
+h1, h2, h3 {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+nav {
+    background-color: #030A8C;
+    grid-area: nav;
+}
+
+nav ul, nav a {
+    list-style-type: none;
+    text-decoration: none;
+}
+
+#MuzMak {
+    font-variant-caps: small-caps;
+}
+
+#curated_playlists section, #your_playlists section {
+    text-align: center;
+    
+}
+
+#curated_playlists {
+    background-color: #030A8C;
+}
+
+#curated_playlists section {
+    margin: 15px;
+    background-color: #020873;
+    width: 140px;
+    padding: 10px;
+    height: 270px;
+    
+}
+
+#your_playlists {
+    background-color: #2699FB;
+}
+
+#your_playlists h3, #your_playlists p, #curated_playlists h3, #curated_playlists p {
+    color: white;
+    line-height: 1em;
+    margin: 10px
+
+}
+
+#your_playlists section {
+    margin: 15px;
+    background-color: #0D8DFB;
+    width: 140px;
+    padding: 10px;
+    height: 270px;
+    
+    
+    
+
+}
+
+.heads {
+    margin-left: 30px;
+    
+}
+
+.scroll {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.scroll section {
+    margin: 10px;
+    position: relative;
+}
+
+.scroll div {
+    position: absolute;
+    top: 251px;
+    background-color: rgba(255,255,255,.75);
+    padding: 5px;
+    height: 50px;
+    width: 350px;
+}
+
+dt {
+    font-style: italic;
+    padding-right: 5px;
+    
+}
+
+dl {
+    color: #590242;
+    display: flex;
+    
+}
+
+audio {
+    position: absolute;
+    bottom: 150px;
+    left: 5px;
+}
+
+.more {
+    background-color: #590242;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 5px;
+    display: block;
+    text-align: center;
+    margin: 10px 0 30px 32px;
+}
+
+div h2 {
+    color: #590242;
+}
+
 p, dl, dd {
     font-size: 1em;
 }
+
 footer p {
     font-size: .75em;
+    color: #590242;
+}
+
+footer {
+    background-color: white;
+    grid-area: footer;
+    text-align: center;
+    height: px;
+    margin-top: 100px
 }
 
 audio::-webkit-media-controls-mute-button {
-
+    background-color: #ffffff;
+    border-radius: 50%;
 }
 audio::-webkit-media-controls-play-button {
-
+    background-color: #ffffff;
+    border-radius: 50%;
 }
 audio::-webkit-media-controls-enclosure {
-
+    background-color: rgba(255, 255, 255, .5);
 }
 
 #trending ::-webkit-scrollbar {
-
+    width: 15px;
 }
 #trending ::-webkit-scrollbar-track {
-
+    box-shadow: inset 0 0 15px #590242;
 }
 #trending ::-webkit-scrollbar-thumb {
-
+    background: #590242;
+    border-radius: 5px;
 }
 #trending ::-webkit-scrollbar-thumb:hover {
-
+    background: #020659;
 }
 #playlists ::-webkit-scrollbar, #curated ::-webkit-scrollbar {
-
+    width: 15px;
 }
 #playlists ::-webkit-scrollbar-track, #curated ::-webkit-scrollbar-track  {
-
+    box-shadow: inset 0 0 15px #020659;
 }
 #playlists ::-webkit-scrollbar-thumb, #curated ::-webkit-scrollbar-thumb {
-
+    background: #020659;
+    border-radius: 5px;
 }
 #playlists ::-webkit-scrollbar-thumb:hover, #curated ::-webkit-scrollbar-thumb:hover {
+    background: #ffffff;
+}
 
+ul {
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+}
+label {
+    cursor: pointer;
+    display: inline-block;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+}
+label span {
+    background-color: #ffffff;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background-color .2s ease-out;
+    width: 18px;
+}
+label span:before, label span:after {
+    background: #ffffff;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+label span:before {
+    top: 5px;
+}
+label span:after {
+    top: -5px;
+}
+input {
+    display: none;
+}
+input:checked ~ ul {
+    max-height: 500px;
+}
+input:checked ~ label span {
+    background: transparent;
+}
+input:checked ~ label span:before {
+    transform: rotate(-45deg);
+}
+input:checked ~ label span:after {
+    transform: rotate(45deg);
+}
+input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
+    top: 0;
+}
+
+
+@media screen and (min-width: 375px) {
+    nav {
+
+    }
+}
+
+@media screen and (min-width:834px) {
+    ul {
+        overflow: visible;
+        position: absolute;
+        top: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+    label span, input {
+        display: none;
+    }
 }
