--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps)
 
 @media screen and (min-width: 375px) {
     nav {
-
+        color: green;
     }
 }
 
