--- a/style.css
+++ b/style.css
@@ -47,10 +47,12 @@ h1, h2, h3 {
 nav {
     background-color: #030A8C;
     grid-area: nav;
+    height: 60px
 }
 
 nav h2 {
     visibility: hidden;
+    position: absolute;
 }
 
 nav ul, nav a {
@@ -70,7 +72,17 @@ nav ul, nav a {
 #MuzMak {
     font-variant-caps: small-caps;
     position: absolute;
+    top: 10px;
+    left: 220px;
+    text-align: center;
+}
 
+#MuzMak a {
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    
+    
 }
 
 #curated_playlists section, #your_playlists section {
@@ -116,6 +128,7 @@ nav ul, nav a {
 
 .heads {
     margin-left: 30px;
+    background-color: white;
     
 }
 
@@ -134,7 +147,6 @@ nav ul, nav a {
 #scroll div {
     position: absolute;
     top: 251px;
-    z-index: 1;
     background-color: rgba(255,255,255,.75);
     padding: 5px;
     height: 50px;
@@ -177,11 +189,16 @@ audio {
     background-color: #590242;
     color: white;
     text-decoration: none;
-    padding: 10px;
+    padding: 10px 30px;
     border-radius: 5px;
-    display: block;
+    display: inline-block;
     text-align: center;
-    margin: 10px 0 30px 32px;
+    margin: 10px 0 30px 20px;
+    
+}
+
+.more_p {
+    background-color: white;
     
 }
 
@@ -202,8 +219,6 @@ footer {
     background-color: white;
     grid-area: footer;
     text-align: center;
-    height: px;
-    margin-top: 100px
 }
 
 audio::-webkit-media-controls-mute-button {
@@ -234,14 +249,14 @@ audio::-webkit-media-controls-enclosure {
 #your_playlists ::-webkit-scrollbar, #curated_playlists ::-webkit-scrollbar {
     width: 15px;
 }
-#playlists ::-webkit-scrollbar-track, #curated ::-webkit-scrollbar-track  {
+#your_playlists ::-webkit-scrollbar-track, #curated_playlists ::-webkit-scrollbar-track  {
     box-shadow: inset 0 0 15px #020659;
 }
-#playlists ::-webkit-scrollbar-thumb, #curated ::-webkit-scrollbar-thumb {
+#your_playlists ::-webkit-scrollbar-thumb, #curated_playlists ::-webkit-scrollbar-thumb {
     background: #020659;
     border-radius: 5px;
 }
-#playlists ::-webkit-scrollbar-thumb:hover, #curated ::-webkit-scrollbar-thumb:hover {
+#your_playlists ::-webkit-scrollbar-thumb:hover, #curated_playlists ::-webkit-scrollbar-thumb:hover {
     background: #ffffff;
 }
 
